--- a/gridStyle.css
+++ b/gridStyle.css
@@ -268,6 +268,9 @@ input{
     width:100%;
     border-bottom: 2px solid #ebeff2;
 }
+.hide{
+    display: none;
+}
 
 
 @media only screen and (min-width: 900px){
@@ -326,7 +329,7 @@ input{
         display: none;
     }
     .hide{
-        display: block;
+        display: flex;
         margin-left: 40px;
         margin-bottom: 20px;
     }
@@ -348,5 +351,11 @@ input{
         margin: 20px;
         
         
+    }
+    svg{
+        width: auto;
+    }
+    .g{
+        display: none;
     }
 }
